openshift-deployment/openshift-dev-export.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-09-11T12:36:45Z
    generation: 1
    labels:
      app: flask
    name: flask
    namespace: hbp-spatial-backend
    resourceVersion: "17818721"
    selfLink: /apis/image.openshift.io/v1/namespaces/hbp-spatial-backend/imagestreams/flask
    uid: d0ec96fd-d490-11e9-acd7-fa163e8fd6a1
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: docker-registry.default.svc:5000/hbp-spatial-backend/flask
    tags:
    - items:
      - created: 2019-09-12T13:36:14Z
        dockerImageReference: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:57dc17bf75d0d593d37c8d41fc80fe1d2762d1056b8e78a6393fb039e45a398d
        generation: 1
        image: sha256:57dc17bf75d0d593d37c8d41fc80fe1d2762d1056b8e78a6393fb039e45a398d
      - created: 2019-09-12T13:13:06Z
        dockerImageReference: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:7475d969288d1a6852611fb8b97eba67896dc84698ca93c11b355db250af9580
        generation: 1
        image: sha256:7475d969288d1a6852611fb8b97eba67896dc84698ca93c11b355db250af9580
      - created: 2019-09-12T12:50:26Z
        dockerImageReference: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:3b925b714a001b209322b87c434a56d1460bcc9ce9f70f6038460716f717d191
        generation: 1
        image: sha256:3b925b714a001b209322b87c434a56d1460bcc9ce9f70f6038460716f717d191
      - created: 2019-09-12T12:45:57Z
        dockerImageReference: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:a92723db9c52eb9bab364d342ae27d31c665e774a1650432c7432950e1244cb0
        generation: 1
        image: sha256:a92723db9c52eb9bab364d342ae27d31c665e774a1650432c7432950e1244cb0
      - created: 2019-09-12T12:32:33Z
        dockerImageReference: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:97351f6c44cab4376b19f6144172a68210f0b27b717daf2af5b414083d34411e
        generation: 1
        image: sha256:97351f6c44cab4376b19f6144172a68210f0b27b717daf2af5b414083d34411e
      - created: 2019-09-12T09:09:47Z
        dockerImageReference: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:b2dd20a9ded0d3714757e512da58cbdcc807cf37cdb83cb3cc607877ed1a3afb
        generation: 1
        image: sha256:b2dd20a9ded0d3714757e512da58cbdcc807cf37cdb83cb3cc607877ed1a3afb
      - created: 2019-09-12T09:03:49Z
        dockerImageReference: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:a881528c446eda00781d9e8128dd207c109c4aaf571ac27af6653122cac098bc
        generation: 1
        image: sha256:a881528c446eda00781d9e8128dd207c109c4aaf571ac27af6653122cac098bc
      - created: 2019-09-12T08:59:02Z
        dockerImageReference: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:e92cad318f83bd569b586adcf8b50e15a0f29274aadf70a984fbec762832986a
        generation: 1
        image: sha256:e92cad318f83bd569b586adcf8b50e15a0f29274aadf70a984fbec762832986a
      - created: 2019-09-12T07:48:55Z
        dockerImageReference: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:1d20dfc915fbe1881d5574c1e0397d51386b6571ad7c7bf35f948f3f439fdbe1
        generation: 1
        image: sha256:1d20dfc915fbe1881d5574c1e0397d51386b6571ad7c7bf35f948f3f439fdbe1
      - created: 2019-09-12T07:21:55Z
        dockerImageReference: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:017d6c9c4767bcf6ac5f0cfe761a2964c3ee04bb36ed9a56f7d716424a8453a6
        generation: 1
        image: sha256:017d6c9c4767bcf6ac5f0cfe761a2964c3ee04bb36ed9a56f7d716424a8453a6
      - created: 2019-09-11T12:39:40Z
        dockerImageReference: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:3196b993586c03e41d3130da1f880e3349ae8b10d0597bf626a6301267e3a673
        generation: 1
        image: sha256:3196b993586c03e41d3130da1f880e3349ae8b10d0597bf626a6301267e3a673
      - created: 2019-09-11T12:37:57Z
        dockerImageReference: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:23865f7d70dc7cdd8add08135cf51cfaf03203712b8b2fdc1ced3f61258eec68
        generation: 1
        image: sha256:23865f7d70dc7cdd8add08135cf51cfaf03203712b8b2fdc1ced3f61258eec68
      tag: latest
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-09-11T12:36:46Z
    labels:
      app: flask
    name: flask
    namespace: hbp-spatial-backend
    resourceVersion: "17818520"
    selfLink: /apis/build.openshift.io/v1/namespaces/hbp-spatial-backend/buildconfigs/flask
    uid: d1229925-d490-11e9-acd7-fa163e8fd6a1
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: flask:latest
    postCommit:
      script: |
        set -e
        python3 -m pip install --user /source[tests]
        cd /source
        python3 -m pytest
    resources: {}
    runPolicy: Serial
    source:
      git:
        ref: dev
        uri: https://github.com/HumanBrainProject/hbp-spatial-backend.git
      type: Git
    strategy:
      dockerStrategy:
        dockerfilePath: Dockerfile
        forcePull: true
      type: Docker
    triggers:
    - generic:
        secret: 27e0b84d966062ca
      type: Generic
    - github:
        secret: 58d5802cdd41a492
      type: GitHub
  status:
    lastVersion: 13
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-09-11T12:36:45Z
    generation: 24
    labels:
      app: flask
    name: flask
    namespace: hbp-spatial-backend
    resourceVersion: "17821785"
    selfLink: /apis/apps.openshift.io/v1/namespaces/hbp-spatial-backend/deploymentconfigs/flask
    uid: d0eda67e-d490-11e9-acd7-fa163e8fd6a1
  spec:
    replicas: 1
    selector:
      deploymentconfig: flask
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: flask
          deploymentconfig: flask
      spec:
        containers:
        - env:
          - name: INSTANCE_PATH
            value: /instance
          image: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:57dc17bf75d0d593d37c8d41fc80fe1d2762d1056b8e78a6393fb039e45a398d
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 60
          name: flask
          ports:
          - containerPort: 8080
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /instance
            name: volume-6c4ne
          - mountPath: /static-data
            name: volume-vjjd7
            readOnly: true
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: instance-dir
          name: volume-6c4ne
        - name: volume-vjjd7
          persistentVolumeClaim:
            claimName: static-data
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - flask
        from:
          kind: ImageStreamTag
          name: flask:latest
          namespace: hbp-spatial-backend
        lastTriggeredImage: docker-registry.default.svc:5000/hbp-spatial-backend/flask@sha256:57dc17bf75d0d593d37c8d41fc80fe1d2762d1056b8e78a6393fb039e45a398d
      type: ImageChange
    - type: ConfigChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: 2019-09-12T09:06:21Z
      lastUpdateTime: 2019-09-12T09:06:21Z
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: 2019-09-12T13:47:14Z
      lastUpdateTime: 2019-09-12T13:47:18Z
      message: replication controller "flask-23" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 23
    observedGeneration: 24
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-09-11T12:36:46Z
    labels:
      app: flask
    name: flask
    namespace: hbp-spatial-backend
    resourceVersion: "17504493"
    selfLink: /api/v1/namespaces/hbp-spatial-backend/services/flask
    uid: d1233ad2-d490-11e9-acd7-fa163e8fd6a1
  spec:
    clusterIP: 172.30.20.217
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: flask
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: 2019-09-11T12:59:39Z
    labels:
      gluster.kubernetes.io/provisioned-for-pvc: static-data
    name: glusterfs-dynamic-002243cf-d494-11e9-acd7-fa163e8fd6a1
    namespace: hbp-spatial-backend
    resourceVersion: "17509721"
    selfLink: /api/v1/namespaces/hbp-spatial-backend/services/glusterfs-dynamic-002243cf-d494-11e9-acd7-fa163e8fd6a1
    uid: 03fa8c7a-d494-11e9-9fef-fa163e42fca5
  spec:
    clusterIP: 172.30.23.17
    ports:
    - port: 1
      protocol: TCP
      targetPort: 1
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-09-11T12:36:45Z
    labels:
      app: flask
    name: flask
    namespace: hbp-spatial-backend
    resourceVersion: "17504494"
    selfLink: /apis/route.openshift.io/v1/namespaces/hbp-spatial-backend/routes/flask
    uid: d0eddece-d490-11e9-acd7-fa163e8fd6a1
  spec:
    host: hbp-spatial-backend.apps-dev.hbp.eu
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: flask
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2019-09-11T12:36:46Z
        status: "True"
        type: Admitted
      host: hbp-spatial-backend.apps-dev.hbp.eu
      routerName: router
      wildcardPolicy: None
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      pv.kubernetes.io/bind-completed: "yes"
      pv.kubernetes.io/bound-by-controller: "yes"
      volume.beta.kubernetes.io/storage-provisioner: kubernetes.io/glusterfs
    creationTimestamp: 2019-09-11T12:59:33Z
    finalizers:
    - kubernetes.io/pvc-protection
    name: static-data
    namespace: hbp-spatial-backend
    resourceVersion: "17509726"
    selfLink: /api/v1/namespaces/hbp-spatial-backend/persistentvolumeclaims/static-data
    uid: 002243cf-d494-11e9-acd7-fa163e8fd6a1
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 10Gi
    storageClassName: glusterfs-storage
    volumeName: pvc-002243cf-d494-11e9-acd7-fa163e8fd6a1
  status:
    accessModes:
    - ReadWriteOnce
    capacity:
      storage: 10Gi
    phase: Bound
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
